// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard snapshot matches with no accounts 1`] = `
"<Provider store={{...}}>
  <Connect(WithStyles(Component))>
    <WithStyles(Component) settings={{...}} accounts={{...}} formatCurrency={[Function]} formatDate={[Function]} totalBalance={0} dispatch={[Function]}>
      <Component settings={{...}} accounts={{...}} formatCurrency={[Function]} formatDate={[Function]} totalBalance={0} dispatch={[Function]} classes={{...}}>
        <WithStyles(Grid) container={true}>
          <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
            <div className=\\"MuiGrid-container-10\\">
              <WithStyles(Grid) container={true} justify=\\"flex-end\\" className={[undefined]}>
                <Grid container={true} justify=\\"flex-end\\" className={[undefined]} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10 MuiGrid-justify-xs-flex-end-28\\">
                    <WithStyles(Paper) className=\\"Component-balancePaper-1\\">
                      <Paper className=\\"Component-balancePaper-1\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 Component-balancePaper-1\\">
                          <WithStyles(Typography) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                            <Typography variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\" theme={{...}} classes={{...}} gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                              <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 MuiTypography-colorTextSecondary-167 MuiTypography-alignRight-158\\">
                                Balance
                              </p>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Typography) variant=\\"h5\\" align=\\"right\\" className=\\"Component-balanceAmount-2\\">
                            <Typography variant=\\"h5\\" align=\\"right\\" className=\\"Component-balanceAmount-2\\" theme={{...}} classes={{...}} color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                              <h5 className=\\"MuiTypography-root-134 MuiTypography-h5-150 MuiTypography-alignRight-158 Component-balanceAmount-2\\">
                                $0.00
                              </h5>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Paper) className=\\"Component-balancePaperIcon-3\\">
                            <Paper className=\\"Component-balancePaperIcon-3\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                              <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 Component-balancePaperIcon-3\\">
                                <pure(DashboardIcon) className=\\"Component-balanceIcon-4\\">
                                  <DashboardIcon className=\\"Component-balanceIcon-4\\">
                                    <WithStyles(SvgIcon) className=\\"Component-balanceIcon-4\\">
                                      <SvgIcon className=\\"Component-balanceIcon-4\\" classes={{...}} color=\\"inherit\\" component=\\"svg\\" fontSize=\\"default\\" viewBox=\\"0 0 24 24\\">
                                        <svg className=\\"MuiSvgIcon-root-169 Component-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                          <path fill=\\"none\\" d=\\"M0 0h24v24H0z\\" />
                                          <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                        </svg>
                                      </SvgIcon>
                                    </WithStyles(SvgIcon)>
                                  </DashboardIcon>
                                </pure(DashboardIcon)>
                              </div>
                            </Paper>
                          </WithStyles(Paper)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
              <WithStyles(Grid) container={true}>
                <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10\\">
                    <WithStyles(Paper) className=\\"Component-summaryPaper-5\\">
                      <Paper className=\\"Component-summaryPaper-5\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 Component-summaryPaper-5\\">
                          <WithStyles(Typography) variant=\\"caption\\" className=\\"Component-noAccounts-6\\">
                            <Typography variant=\\"caption\\" className=\\"Component-noAccounts-6\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                              <span className=\\"MuiTypography-root-134 MuiTypography-caption-144 Component-noAccounts-6\\">
                                You don&#39;t have any accounts yet
                              </span>
                            </Typography>
                          </WithStyles(Typography)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
            </div>
          </Grid>
        </WithStyles(Grid)>
      </Component>
    </WithStyles(Component)>
  </Connect(WithStyles(Component))>
</Provider>"
`;

exports[`Dashboard snapshot matches with one account 1`] = `
"<Provider store={{...}}>
  <Connect(WithStyles(Component))>
    <WithStyles(Component) settings={{...}} accounts={{...}} formatCurrency={[Function]} formatDate={[Function]} totalBalance={10} dispatch={[Function]}>
      <Component settings={{...}} accounts={{...}} formatCurrency={[Function]} formatDate={[Function]} totalBalance={10} dispatch={[Function]} classes={{...}}>
        <WithStyles(Grid) container={true}>
          <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
            <div className=\\"MuiGrid-container-10\\">
              <WithStyles(Grid) container={true} justify=\\"flex-end\\" className={[undefined]}>
                <Grid container={true} justify=\\"flex-end\\" className={[undefined]} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10 MuiGrid-justify-xs-flex-end-28\\">
                    <WithStyles(Paper) className=\\"Component-balancePaper-1\\">
                      <Paper className=\\"Component-balancePaper-1\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 Component-balancePaper-1\\">
                          <WithStyles(Typography) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                            <Typography variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\" theme={{...}} classes={{...}} gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                              <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 MuiTypography-colorTextSecondary-167 MuiTypography-alignRight-158\\">
                                Balance
                              </p>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Typography) variant=\\"h5\\" align=\\"right\\" className=\\"Component-balanceAmount-2\\">
                            <Typography variant=\\"h5\\" align=\\"right\\" className=\\"Component-balanceAmount-2\\" theme={{...}} classes={{...}} color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                              <h5 className=\\"MuiTypography-root-134 MuiTypography-h5-150 MuiTypography-alignRight-158 Component-balanceAmount-2\\">
                                $10.00
                              </h5>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Paper) className=\\"Component-balancePaperIcon-3\\">
                            <Paper className=\\"Component-balancePaperIcon-3\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                              <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 Component-balancePaperIcon-3\\">
                                <pure(DashboardIcon) className=\\"Component-balanceIcon-4\\">
                                  <DashboardIcon className=\\"Component-balanceIcon-4\\">
                                    <WithStyles(SvgIcon) className=\\"Component-balanceIcon-4\\">
                                      <SvgIcon className=\\"Component-balanceIcon-4\\" classes={{...}} color=\\"inherit\\" component=\\"svg\\" fontSize=\\"default\\" viewBox=\\"0 0 24 24\\">
                                        <svg className=\\"MuiSvgIcon-root-169 Component-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                          <path fill=\\"none\\" d=\\"M0 0h24v24H0z\\" />
                                          <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                        </svg>
                                      </SvgIcon>
                                    </WithStyles(SvgIcon)>
                                  </DashboardIcon>
                                </pure(DashboardIcon)>
                              </div>
                            </Paper>
                          </WithStyles(Paper)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
              <WithStyles(Grid) container={true}>
                <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10\\">
                    <WithStyles(Paper) className=\\"Component-summaryPaper-5\\">
                      <Paper className=\\"Component-summaryPaper-5\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 Component-summaryPaper-5\\">
                          <WithStyles(Table) className={[undefined]}>
                            <Table className={[undefined]} classes={{...}} component=\\"table\\" padding=\\"default\\">
                              <table className=\\"MuiTable-root-178\\">
                                <WithStyles(TableHead)>
                                  <TableHead classes={{...}} component=\\"thead\\">
                                    <thead className=\\"MuiTableHead-root-179\\">
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-180 MuiTableRow-head-183\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <th className=\\"MuiTableCell-root-185 MuiTableCell-head-186\\" aria-sort={{...}} scope=\\"col\\" />
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <th className=\\"MuiTableCell-root-185 MuiTableCell-head-186 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope=\\"col\\">
                                                  Last updated
                                                </th>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <th className=\\"MuiTableCell-root-185 MuiTableCell-head-186 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope=\\"col\\">
                                                  USD
                                                </th>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                    </thead>
                                  </TableHead>
                                </WithStyles(TableHead)>
                                <WithStyles(TableBody)>
                                  <TableBody classes={{...}} component=\\"tbody\\">
                                    <tbody className=\\"MuiTableBody-root-197\\">
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-180\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187\\" aria-sort={{...}} scope={[undefined]}>
                                                  <span className=\\"Component-institutionWrapper-7\\">
                                                    <WithStyles(InstitutionIcon) institution=\\"TD\\" size=\\"small\\" className=\\"Component-institutionIcon-8\\">
                                                      <InstitutionIcon institution=\\"TD\\" size=\\"small\\" className=\\"Component-institutionIcon-8\\" classes={{...}}>
                                                        <img src=\\"undefined\\" alt=\\"TD\\" className=\\"InstitutionIcon-small-198 Component-institutionIcon-8\\" />
                                                      </InstitutionIcon>
                                                    </WithStyles(InstitutionIcon)>
                                                    <WithStyles(Typography) variant=\\"subtitle2\\">
                                                      <Typography variant=\\"subtitle2\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                        <h6 className=\\"MuiTypography-root-134 MuiTypography-subtitle2-153\\">
                                                          TD
                                                        </h6>
                                                      </Typography>
                                                    </WithStyles(Typography)>
                                                  </span>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187\\" aria-sort={{...}} scope={[undefined]} />
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(Typography) variant=\\"subtitle2\\">
                                                    <Typography variant=\\"subtitle2\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <h6 className=\\"MuiTypography-root-134 MuiTypography-subtitle2-153\\">
                                                        $10.00
                                                      </h6>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-180\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(Typography) className=\\"Component-accountName-9\\">
                                                    <Typography className=\\"Component-accountName-9\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 Component-accountName-9\\" />
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope={[undefined]}>
                                                  Jan 13, 2019
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope={[undefined]}>
                                                  $10.00
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                    </tbody>
                                  </TableBody>
                                </WithStyles(TableBody)>
                              </table>
                            </Table>
                          </WithStyles(Table)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
            </div>
          </Grid>
        </WithStyles(Grid)>
      </Component>
    </WithStyles(Component)>
  </Connect(WithStyles(Component))>
</Provider>"
`;

exports[`Dashboard snapshot matches with two accounts in a different currency 1`] = `
"<Provider store={{...}}>
  <Connect(WithStyles(Component))>
    <WithStyles(Component) settings={{...}} accounts={{...}} formatCurrency={[Function]} formatDate={[Function]} totalBalance={20} dispatch={[Function]}>
      <Component settings={{...}} accounts={{...}} formatCurrency={[Function]} formatDate={[Function]} totalBalance={20} dispatch={[Function]} classes={{...}}>
        <WithStyles(Grid) container={true}>
          <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
            <div className=\\"MuiGrid-container-10\\">
              <WithStyles(Grid) container={true} justify=\\"flex-end\\" className={[undefined]}>
                <Grid container={true} justify=\\"flex-end\\" className={[undefined]} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10 MuiGrid-justify-xs-flex-end-28\\">
                    <WithStyles(Paper) className=\\"Component-balancePaper-1\\">
                      <Paper className=\\"Component-balancePaper-1\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 Component-balancePaper-1\\">
                          <WithStyles(Typography) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                            <Typography variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\" theme={{...}} classes={{...}} gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                              <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 MuiTypography-colorTextSecondary-167 MuiTypography-alignRight-158\\">
                                Balance
                              </p>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Typography) variant=\\"h5\\" align=\\"right\\" className=\\"Component-balanceAmount-2\\">
                            <Typography variant=\\"h5\\" align=\\"right\\" className=\\"Component-balanceAmount-2\\" theme={{...}} classes={{...}} color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                              <h5 className=\\"MuiTypography-root-134 MuiTypography-h5-150 MuiTypography-alignRight-158 Component-balanceAmount-2\\">
                                €20.00
                              </h5>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Paper) className=\\"Component-balancePaperIcon-3\\">
                            <Paper className=\\"Component-balancePaperIcon-3\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                              <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 Component-balancePaperIcon-3\\">
                                <pure(DashboardIcon) className=\\"Component-balanceIcon-4\\">
                                  <DashboardIcon className=\\"Component-balanceIcon-4\\">
                                    <WithStyles(SvgIcon) className=\\"Component-balanceIcon-4\\">
                                      <SvgIcon className=\\"Component-balanceIcon-4\\" classes={{...}} color=\\"inherit\\" component=\\"svg\\" fontSize=\\"default\\" viewBox=\\"0 0 24 24\\">
                                        <svg className=\\"MuiSvgIcon-root-169 Component-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                          <path fill=\\"none\\" d=\\"M0 0h24v24H0z\\" />
                                          <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                        </svg>
                                      </SvgIcon>
                                    </WithStyles(SvgIcon)>
                                  </DashboardIcon>
                                </pure(DashboardIcon)>
                              </div>
                            </Paper>
                          </WithStyles(Paper)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
              <WithStyles(Grid) container={true}>
                <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10\\">
                    <WithStyles(Paper) className=\\"Component-summaryPaper-5\\">
                      <Paper className=\\"Component-summaryPaper-5\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 Component-summaryPaper-5\\">
                          <WithStyles(Table) className={[undefined]}>
                            <Table className={[undefined]} classes={{...}} component=\\"table\\" padding=\\"default\\">
                              <table className=\\"MuiTable-root-178\\">
                                <WithStyles(TableHead)>
                                  <TableHead classes={{...}} component=\\"thead\\">
                                    <thead className=\\"MuiTableHead-root-179\\">
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-180 MuiTableRow-head-183\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <th className=\\"MuiTableCell-root-185 MuiTableCell-head-186\\" aria-sort={{...}} scope=\\"col\\" />
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <th className=\\"MuiTableCell-root-185 MuiTableCell-head-186 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope=\\"col\\">
                                                  Last updated
                                                </th>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <th className=\\"MuiTableCell-root-185 MuiTableCell-head-186 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope=\\"col\\">
                                                  EUR
                                                </th>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                    </thead>
                                  </TableHead>
                                </WithStyles(TableHead)>
                                <WithStyles(TableBody)>
                                  <TableBody classes={{...}} component=\\"tbody\\">
                                    <tbody className=\\"MuiTableBody-root-197\\">
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-180\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187\\" aria-sort={{...}} scope={[undefined]}>
                                                  <span className=\\"Component-institutionWrapper-7\\">
                                                    <WithStyles(InstitutionIcon) institution=\\"TD\\" size=\\"small\\" className=\\"Component-institutionIcon-8\\">
                                                      <InstitutionIcon institution=\\"TD\\" size=\\"small\\" className=\\"Component-institutionIcon-8\\" classes={{...}}>
                                                        <img src=\\"undefined\\" alt=\\"TD\\" className=\\"InstitutionIcon-small-198 Component-institutionIcon-8\\" />
                                                      </InstitutionIcon>
                                                    </WithStyles(InstitutionIcon)>
                                                    <WithStyles(Typography) variant=\\"subtitle2\\">
                                                      <Typography variant=\\"subtitle2\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                        <h6 className=\\"MuiTypography-root-134 MuiTypography-subtitle2-153\\">
                                                          TD
                                                        </h6>
                                                      </Typography>
                                                    </WithStyles(Typography)>
                                                  </span>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187\\" aria-sort={{...}} scope={[undefined]} />
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(Typography) variant=\\"subtitle2\\">
                                                    <Typography variant=\\"subtitle2\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <h6 className=\\"MuiTypography-root-134 MuiTypography-subtitle2-153\\">
                                                        €20.00
                                                      </h6>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-180\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(Typography) className=\\"Component-accountName-9\\">
                                                    <Typography className=\\"Component-accountName-9\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 Component-accountName-9\\" />
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope={[undefined]}>
                                                  Jan 13, 2019
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope={[undefined]}>
                                                  €10.00
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-180\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(Typography) className=\\"Component-accountName-9\\">
                                                    <Typography className=\\"Component-accountName-9\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 Component-accountName-9\\" />
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope={[undefined]}>
                                                  Jan 13, 2019
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-185 MuiTableCell-body-187 MuiTableCell-alignRight-195\\" aria-sort={{...}} scope={[undefined]}>
                                                  €10.00
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                    </tbody>
                                  </TableBody>
                                </WithStyles(TableBody)>
                              </table>
                            </Table>
                          </WithStyles(Table)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
            </div>
          </Grid>
        </WithStyles(Grid)>
      </Component>
    </WithStyles(Component)>
  </Connect(WithStyles(Component))>
</Provider>"
`;
